        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

3.9 to 3.9.1: (XXXX xx, 2013)

  * Added ability to modify 'tiadriven' commandline argument to the
    debugger 'TIA' tab, and 'ramrandom' to the debugger 'I/O' tab.  These
    options were available for quite some time, but they weren't exposed
    in the UI.

  * Fixed bug in Linux/UNIX port, whereby a maximize button was always
    present in the window title bar.  Stella could not be expanded in
    this way, so the button was removed.

-Have fun!


3.8.1 to 3.9: (June 27, 2013)

  * Greatly extended functionality of the debugger disassembly:
      - There is now a new tab which lists information specific to the
        cartridge bankswitching scheme in use.  This includes the ability
        to modify internal state even for esoteric ROMs which don't
        follow the standard layout of 4K per bank.

      - The debugger now generates DASM-compatible disassembled code,
        which can be saved to an external file.  This disassembly is
        based on both a static and runtime analysis, and is extremely
        accurate.  It also automatically differentiates between
        CODE/PGFX/GFX/DATA/ROW areas, whereas normal Distella
        only differentiates between CODE/GFX/ROW.  For now, only
        single-bank (4K and smaller) ROMs are supported; support for
        multi-bank ROMs will come in a future release.

      - The disassembly now recognizes various TIA/RIOT read/write
        mirrors, and marks them as such (for example, INPT4|$30 instead
        of INPT4 for address $3C).  Special thanks to Omegamatrix for
        sample code and idea for this feature.
